--- a/app_react-native_tii07/package.json
+++ b/app_react-native_tii07/package.json
@@ -21,7 +21,8 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-font": "~12.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
